--- a/.classpath
+++ b/.classpath
@@ -13,5 +13,10 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
+	<classpathentry kind="lib" path="C:/Users/Pulpin/Desktop/librerias/eclipselink.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Pulpin/Desktop/librerias/jakarta.persistence_2.2.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Pulpin/Desktop/librerias/jstl-api-1.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Pulpin/Desktop/librerias/jstl-impl-1.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Pulpin/Desktop/librerias/mysql-connector-java-8.0.19.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
